--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@funstack/static",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.0",
   "description": "FUNSTACK static library",
   "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.mts",
       "import": "./dist/index.mjs"
-    }
+    },
+    "./entries/*": "./dist/entries/*.mjs"
   },
   "files": [
     "dist"
@@ -22,9 +23,26 @@
   "author": "uhyo <uhyo@uhy.ooo>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "catalog:",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "jsdom": "^27.3.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "tsdown": "^0.18.2",
     "typescript": "^5.7.0",
+    "vite": "catalog:",
     "vitest": "^4.0.16"
+  },
+  "dependencies": {
+    "@vitejs/plugin-rsc": "^0.5.11",
+    "react-error-boundary": "^6.0.3",
+    "rsc-html-stream": "^0.0.7",
+    "srvx": "^0.10.0"
+  },
+  "peerDependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "vite": "catalog:"
   }
 }
