--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,11 @@
 packages:
-  - "packages/*"
+  - packages/*
+
+onlyBuiltDependencies:
+  - esbuild
+
+catalog:
+  vite: ^7.3.1
+  "@types/node": ^25.0.6
+  react: ^19.2.3
+  react-dom: ^19.2.3
