--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown --watch",
-    "test": "vitest",
+    "test": "echo 'TODO: add tests'",
     "test:run": "vitest run",
     "typecheck": "tsc --noEmit"
   },
