--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@funstack/router": "0.0.3-alpha.1",
+    "@funstack/static": "workspace:*",
     "@types/node": "catalog:",
     "react": "catalog:",
-    "react-dom": "catalog:",
-    "@funstack/static": "workspace:*"
+    "react-dom": "catalog:"
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
