--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@funstack/static",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "FUNSTACK static library",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/uhyo/funstack-static.git",
+    "directory": "packages/static"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.mts",
